fix: remove unneccessary plugin